# rust-minetestworld

./: .gitignore  Cargo.toml  README.md  test.sqlite
.github/workflows/: rust.yaml
TestWorld/: test_zstd_content  testmapblock  world.mt
examples/: create_world.rs  iter_map.rs  list_positions.rs  modify_map.rs  modify_mapblocks.rs
src/: lib.rs  map_block.rs  map_data.rs  positions.rs  reexport.rs  tests.rs  voxel_manip.rs  world.rs
tests/: change-nothing.rs  change-voxel.rs  voxel-manip.rs
tests/common/: mod.rs
