[package]
name = "minetestworld"
version = "0.1.1"
authors = ["Jan Ole Zabel <jan.zabel@posteo.de>"]
license = "AGPL-3.0"
repository = "https://github.com/UgnilJoZ/rust-minetestworld/"
documentation = "http://docs.rs/minetestworld"
description = "Read Minetest worlds"

[dependencies]
thiserror = "1.0"
rusqlite = "0.19.0"
zstd = "0.10"

[target.'cfg(not(all(target_endian = "big", target_pointer_width = "32")))'.dependencies]
smartstring = {version = "0.2", optional = true}