[package]
name = "minetestworld"
version = "0.2.1"
authors = ["Jan Ole Zabel <jan.zabel@posteo.de>"]
license = "AGPL-3.0"
repository = "https://github.com/UgnilJoZ/rust-minetestworld/"
documentation = "http://docs.rs/minetestworld"
description = "Read Minetest worlds"
edition = "2021"

[dependencies]
thiserror = "1.0"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "sqlite" ] }
redis = { version = "0.21.0", features = ["async-std-comp"] }
url = "2.2"
async-std = { version = "1", features = [ "attributes" ] }
futures = "0.3"
zstd = "0.10"

[target.'cfg(not(all(target_endian = "big", target_pointer_width = "32")))'.dependencies]
smartstring = {version = "0.2", optional = true}